final code commit

--- a/templates/html/homepage.html
+++ b/templates/html/homepage.html
@@ -97,7 +97,7 @@
                                 <div class="mb-2 collapse collapse-plus">
                                     <input type="checkbox" name="savedoutfits" />
                                     <div class="collapse-title text-xl font-medium">
-                                        <button class="btn btn-outline w-full text-left" type="button" data-toggle="collapse-content" data-target="#savedoutfits" aria-expanded="true" aria-controls="savedoutfits">
+                                        <button class="btn btn-outline w-full text-left text-purple-500 dark: text-slate-50" type="button" data-toggle="collapse-content" data-target="#savedoutfits" aria-expanded="true" aria-controls="savedoutfits">
                                             Saved Outfits
 
                                         </button>
@@ -609,7 +609,7 @@
       <div class="join">
         <a href=""><button class="join-item btn">«</button></a>
         <button class="join-item btn">{{outfit.id}}</button>
-        <button class="join-item btn">»</button>
+        <a href=""><button class="join-item btn">»</button></a>
       </div>
     </div>
 </div>
