--- a/templates/html/wardrobe.html
+++ b/templates/html/wardrobe.html
@@ -47,7 +47,7 @@
                 <div class="mb-2 collapse collapse-plus">
                   <input type="checkbox" name="{{category.name}}"/> 
                   <div class="collapse-title text-xl font-medium">
-                  <button class="btn btn-outline w-full text-left text-black dark:text-slate-50 " type="button" data-toggle="collapse-content" data-target="#collapse{{ category.name }}" aria-expanded="true" aria-controls="collapse{{ category.name }}">
+                  <button class="btn btn-outline w-full text-left text-black dark:text-orange-600" type="button" data-toggle="collapse-content" data-target="#collapse{{ category.name }}" aria-expanded="true" aria-controls="collapse{{ category.name }}">
                     {{ category.name }}   
                   </button>
                   </div>
