--- a/templates/html/base.html
+++ b/templates/html/base.html
@@ -1,79 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8" />
     <title>StyleSync</title>
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins&display=swap" rel="stylesheet">
-    <link
-      rel="stylesheet"
-      href="../../static/output.css">
+    <link rel="stylesheet" href="../../static/output.css">
     <style>
-      .nav-link.active {
-        color: #FF76CE;
-      }
-      .container-fluid{
-        padding: 0;
-      }
-      .nav-link {
-        font-family: 'Poppins', cursive;
-        font-size: medium;
-      }
+        .nav-link.active {
+            color: #FF76CE;
+        }
+        .container-fluid {
+            padding: 0;
+        }
+        .nav-link {
+            font-family: 'Poppins', cursive;
+            font-size: medium;
+        }
+        .dropdown-content {
+            z-index: 50;
+        }
     </style>
-    {% block head %} {% endblock %} 
-  </head>
-  <body class="container-fluid" style="max-width: 100vw; overflow-x: hidden">
+    {% block head %} {% endblock %}
+</head>
+<body class="container-fluid" style="max-width: 100vw; overflow-x: hidden">
     <div class="navbar flex justify-between items-center py-4 px-6 mb-3 bg-[#8a2be2]">
-      <a class="navbar-brand text-white h-full  " href="{{url_for('html.home')}}"><div class="w-24 h-full"><img src="../../static/items/Screenshot_2024-05-26_at_4.31.08_PM.png" class="object-scale-down" alt="StyleSync Logo"></div></a>
-      <div class="flex space-x-4 items-center">                                             
-        <a class="nav-link text-white {% if request.endpoint == 'html.home' %} active{% else %} {% endif %}" href="{{url_for('html.home')}}">My Outfits</a>
-        <a class="nav-link text-white {% if request.endpoint == 'html.newoutfit' %} active{% else %} {% endif %}" href="{{url_for('html.newoutfit')}}">New Outfit</a>
-        <a class="nav-link text-white {% if request.endpoint == 'html.wardrobe' %} active{% else %} {% endif %}" href="{{url_for('html.wardrobe')}}">Wardrobe</a>
-        <a class="nav-link text-white {% if request.endpoint == 'html.new_item' %} active{% else %} {% endif %}" href="{{url_for('html.new_item')}}">New Item</a>
-        <div class="dropdown nav-link">
-          <button class="nav-link text-white" id="dropdownMenuLink" data-dropdown-toggle="dropdownMenu">
-            <i class="fa-solid fa-user"></i>
-          </button>
-          <ul id="dropdownMenu" class="dropdown-content bg-white shadow rounded-box absolute right-0 hidden">
-            <li><a class="dropdown-item px-4 py-2" href="{{url_for('html.profile')}}"> <i class="fa-solid fa-user"></i> My Profile</a></li>
-            <li>
-              {% if current_user.is_authenticated %}
-                <a class="dropdown-item px-4 py-2" href="{{url_for('authorization.logout')}}"> <i class="fas fa-sign-out-alt"></i> Logout</a>
-              {% else %}
-                <a class="nav-link px-4 py-2" href="{{url_for('authorization.home')}}">Login</a>
-                <a class="nav-link px-4 py-2" href="{{url_for('authorization.register')}}">Register</a>
-              {% endif %}
-            </li>
-          </ul>
+        <a class="navbar-brand text-white h-full" href="{{ url_for('html.home') }}">
+            <div class="w-24 h-full">
+                <img src="../../static/items/Screenshot_2024-05-26_at_4.31.08_PM.png" class="object-scale-down" alt="StyleSync Logo">
+            </div>
+        </a>
+        <div class="flex space-x-4 items-center">
+            <a class="nav-link text-white {% if request.endpoint == 'html.home' %} active{% else %} {% endif %}" href="{{ url_for('html.home') }}">My Outfits</a>
+            <a class="nav-link text-white {% if request.endpoint == 'html.newoutfit' %} active{% else %} {% endif %}" href="{{ url_for('html.newoutfit') }}">New Outfit</a>
+            <a class="nav-link text-white {% if request.endpoint == 'html.wardrobe' %} active{% else %} {% endif %}" href="{{ url_for('html.wardrobe') }}">Wardrobe</a>
+            <a class="nav-link text-white {% if request.endpoint == 'html.new_item' %} active{% else %} {% endif %}" href="{{ url_for('html.new_item') }}">New Item</a>
+            <div class="relative">
+                <button class="nav-link text-white focus:outline-none" id="dropdownMenuLink">
+                    <i class="fa-solid fa-user"></i>
+                </button>
+                <ul id="dropdownMenu" class="dropdown-content bg-white shadow rounded-box absolute right-0 mt-2 hidden">
+                    <li><a class="dropdown-item px-4 py-2 flex items-center" href="{{ url_for('html.profile') }}">
+                        <i class="fa-solid fa-user mr-2"></i> My Profile</a></li>
+                    <li>
+                        {% if current_user.is_authenticated %}
+                            <a class="dropdown-item px-4 py-2 flex items-center" href="{{ url_for('authorization.logout') }}">
+                                <i class="fas fa-sign-out-alt mr-2"></i> Logout</a>
+                        {% else %}
+                            <a class="dropdown-item px-4 py-2 flex items-center" href="{{ url_for('authorization.home') }}">Login</a>
+                            <a class="dropdown-item px-4 py-2 flex items-center" href="{{ url_for('authorization.register') }}">Register</a>
+                        {% endif %}
+                    </li>
+                </ul>
+            </div>
         </div>
-      </div>
     </div>
-    {% with messages = get_flashed_messages(with_categories=true) %} 
-      {% if messages %} 
-        {% include '/html/toast.html' %} 
-      {% endif %} 
+
+    {% block content %} {% endblock %}
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+    <div class="toast">
+        <div class="alert alert-info z-50">
+            {{ messages[0][1] }}
+        </div>
+    </div>
+    {% endif %}
     {% endwith %}
-    {% block content %} {% endblock %} 
     <script>
-      document.addEventListener('DOMContentLoaded', function () {
-        const dropdownToggle = document.querySelector('[data-dropdown-toggle]');
-        const dropdownMenu = document.getElementById('dropdownMenu');
+        document.addEventListener('DOMContentLoaded', function () {
+            const dropdownToggle = document.getElementById('dropdownMenuLink');
+            const dropdownMenu = document.getElementById('dropdownMenu');
 
-        dropdownToggle.addEventListener('click', function () {
-          dropdownMenu.classList.toggle('hidden');
-        });
+            dropdownToggle.addEventListener('click', function () {
+                dropdownMenu.classList.toggle('hidden');
+            });
 
-        document.addEventListener('click', function (e) {
-          if (!dropdownToggle.contains(e.target) && !dropdownMenu.contains(e.target)) {
-            dropdownMenu.classList.add('hidden');
-          }
+            document.addEventListener('click', function (e) {
+                if (!dropdownToggle.contains(e.target) && !dropdownMenu.contains(e.target)) {
+                    dropdownMenu.classList.add('hidden');
+                }
+            });
         });
-      });
     </script>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     <script src="https://kit.fontawesome.com/704b4776e9.js" crossorigin="anonymous"></script>
-  </body>
+</body>
 </html>
