--- a/templates/html/homepage.html
+++ b/templates/html/homepage.html
@@ -97,7 +97,7 @@
                                 <div class="mb-2 collapse collapse-plus">
                                     <input type="checkbox" name="savedoutfits" />
                                     <div class="collapse-title text-xl font-medium">
-                                        <button class="btn btn-outline w-full text-left text-purple-500 dark: text-slate-50" type="button" data-toggle="collapse-content" data-target="#savedoutfits" aria-expanded="true" aria-controls="savedoutfits">
+                                        <button class="btn btn-outline w-full text-left" type="button" data-toggle="collapse-content" data-target="#savedoutfits" aria-expanded="true" aria-controls="savedoutfits">
                                             Saved Outfits
 
                                         </button>
@@ -161,6 +161,40 @@
                           </div>
                         </div>
                     </div>
+                    <div class=" w-1/2 ml-24 shadow-lg  bg-base-100 cursor-pointer hover: drop-shadow" onclick="document.getElementById('offcanvasrow1').classList.remove('hidden')">
+                      <figure><img class="object-scale-down w-full h-48 pt-6 "  src="{{ url_for('static', filename = '/items/stockpics/blingstock.png') }}" alt="Image"></figure> 
+                  </div>
+                  <div id="offcanvasrow1" class="fixed inset-0 hidden z-50 bg-black bg-opacity-50 flex justify-center items-end">
+                      <div class="bg-white w-full h-3/4 overflow-y-auto p-4">
+                          <div class="flex justify-between items-center">
+                              <h5 class="text-xl font-bold">Choose Accessory</h5>
+                              <button class="btn btn-sm btn-circle fixed" onclick="document.getElementById('offcanvasrow1').classList.add('hidden')">✕</button>
+                          </div>
+                          <div class="grid grid-flow-col">
+                              {% for canvas_item in items['Accessories'] %}
+                              <div>
+                              <form action="{{url_for('html.add_item', id = outfit.id)}}" method="post">
+                                  <input type="hidden" name="item_id" value="{{canvas_item.id}}">
+                                  <input type="hidden" name="item_to_be_replaced_id" value="">
+  
+                                  <input type="hidden" name="item_name" value="{{canvas_item.name}}">
+                              <button type="submit">
+                              <div class="grid-item">
+                                <div class="card" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottoma" aria-controls="offcanvasBottom" style="width: 25rem">
+                                  <figure><img class="object-scale-down h-48 p-3" src="{{ url_for('static', filename = canvas_item.image_url) }}" alt="Image"/></figure>
+                                  <div class="card-body">
+                                    <h5 class="card-title text-center">{{canvas_item.name}}</h5>
+                                  </div>
+                              </div>
+                            </div>
+                            </button   >
+                            </form>
+  
+                              </div>
+                            {% endfor %}
+                            </div>
+                          </div>
+                      </div>
                 {% endfor %}
                 {% else %}
                 <div class=" w-1/2 ml-24 shadow-lg  bg-base-100 cursor-pointer hover: drop-shadow" onclick="document.getElementById('offcanvasrow1').classList.remove('hidden')">
@@ -221,10 +255,6 @@
                         <div class="card-body">
               
                           <div class="card-actions justify-end">
-                            {% for tag in item.item_tags %}
-                            <div class="badge badge-outline badge-primary p-3"><i class="fa-solid fa-tag -ml-0 m-1"></i>{{ tag.filter.name }}</div>
-
-                            {% endfor %}
                         </div>
                         </div>
                     </div>
@@ -305,9 +335,7 @@
                         <div class="card-body">
               
                           <div class="card-actions justify-end">
-                            {% for tag in item.item_tags %}
-                            <div class="badge badge-outline badge-primary p-3"><i class="fa-solid fa-tag -ml-0 m-1"></i>{{ tag.filter.name }}</div>
-                            {% endfor %}
+
                           </div>
                         </div>
                     </div>
@@ -388,9 +416,7 @@
                         <div class="card-body">
               
                           <div class="card-actions justify-end">
-                            {% for tag in item.item_tags %}
-                            <div class="badge badge-outline badge-primary p-3"><i class="fa-solid fa-tag -ml-0 m-1"></i>{{ tag.filter.name }}</div>
-                            {% endfor %}
+
                           </div>
                         </div>
                     </div>
@@ -513,6 +539,42 @@
                               </div>
                             </div>
                         </div>
+                        <div class="card compact shadow-lg  bg-base-100 cursor-pointer hover: drop-shadow" onclick="document.getElementById('offcanvasouter').classList.remove('hidden')">
+                          <figure><img class="object-scale-down w-full h-48 pt-6 "  src="{{ url_for('static', filename = '/items/stockpics/jacketstock.png') }}" alt="Image"></figure>
+                          <div class="card-body">
+                              <h5 class="card-title"></h5>
+                          </div> 
+                      </div>
+  
+                      <div id="offcanvasouter" class="fixed inset-0 hidden z-50 bg-black bg-opacity-50 flex justify-center items-end">
+                          <div class="bg-white w-full h-3/4 overflow-y-auto p-4">
+                              <div class="flex justify-between items-center">
+                                  <h5 class="text-xl font-bold">Choose Shoes</h5>
+                                  <button class="btn btn-sm btn-circle" onclick="document.getElementById('offcanvasouter').classList.add('hidden')">✕</button>
+                              </div>
+                              <div class="grid grid-cols-4">
+                                  {% for canvas_item in items['Outer Wear'] %}
+                                  <div>
+                                  <form action="{{url_for('html.add_item', id=outfit.id)}}" method="post">
+                                      <input type="hidden" name="item_id" value="{{canvas_item.id}}">
+                                      <input type="hidden" name="item_to_be_replaced_id" value="">
+      
+                                      <input type="hidden" name="item_name" value="{{canvas_item.name}}">
+                                  <button type="submit">
+                                    <div class="card" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottoma" aria-controls="offcanvasBottom" style="width: 25rem">
+                                      <figure><img class="object-scale-down h-48 p-3" src="{{ url_for('static', filename = canvas_item.image_url) }}" alt="Image"/></figure>
+                                      <div class="card-body">
+                                        <h5 class="card-title text-center">{{canvas_item.name}}</h5>
+                                      </div>
+                                  </div>
+                                
+                                </button>
+                                </form>
+                                  </div>
+                                {% endfor %}
+                                </div>
+                              </div>
+                          </div>
                     {% endfor %}
                     
                     {% else %}
